tests/parser/should_fail/T12446.hs
{-# LANGUAGE Haskell2010 #-}
module T12446 where

x = undefined @(_ ~ _)
