tests/parser/should_fail/T12446.stderr

T12446.hs:4:5: error: [GHC-23482]
    Illegal visible type application: @(_ ~ _)
    Suggested fix:
      Perhaps you intended to use the ‘TypeApplications’ extension
